--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,11 @@ img {
     color: white;
 }
 
+.hero.blog {
+    background: url('../images/home/blog.jpg') no-repeat center center/cover;
+    height: 50vh;
+}
+
 .hero .content {
     display: flex;
     flex-direction: column;
@@ -160,6 +165,30 @@ img {
 
 .callback-form input:focus {
     outline-color: green;
+}
+
+/* Posts */
+
+.post {
+    padding: 50px 30px;
+}
+
+.post h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: #ccc solid 1px;
+}
+
+.post .meta {
+    margin-bottom: 30px;
+}
+
+.post img {
+    width: 300px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto 30px;
 }
 
 .footer {
